--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 
 
       <div id="result">
-         <p id="textResult">Preencha os dados para a verificação</p>
-         <img id="imgResult" src="" alt="Imagem de resultado">
+         <p id="textResult">Preencha os dados para a verificação...</p>
+         <img id="imgResult" src="" alt="">
       </div>
 
    </section>
